# pora

./: .gitignore  Cargo.toml  README.md  pyproject.toml
pora/: __init__.py  abi.json  cli.py  client.py  crypto.py  mcp_server.py
src/: abi.rs  github.rs  main.rs  output.rs  rpc.rs
src/commands/: mod.rs  performer.rs  request.rs  system.rs
src/mcp/: mod.rs  resources.rs  tools.rs
tests/: mcp_integration.rs
